# dev-container

./: .deepsource.toml  .devcontainer.json  .gitignore  .hadolint.yml  CHANGELOG.md  Dockerfile  README.md  docker-entrypoint.sh  flake.nix
.github/workflows/: ci.yml
config/: config.nix  flake.nix
docs/: getting_started.md
examples/dind/: flake.nix
examples/dind/.devcontainer/: devcontainer.json  docker-compose.yml
examples/python/: .devcontainer.json  flake.nix  pyproject.toml
src/: Dockerfile  config.nix  direnv.toml
test/: flake.nix  run.sh  test.sh
